Windows QPA: Fix cursors getting out of sync after restoring override cursors on native windows

Introduce a flag to QWindowsWindow which forces the cursor to be applied
after restoring override cursors.

Fixes: QTBUG-98856
Change-Id: Id62cdc2dd01f45324503a542446b1c11a1fe6f44
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Keith Kyzivat <keith.kyzivat@qt.io>
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
(cherry picked from commit 9ad00e4b3f4d71f31ba041af623741522a221ffc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>