src/plugins/platforms/windows/qwindowscontext.h
@@ -165,6 +165,7 @@ class QWindowsContext
 {
     Q_DISABLE_COPY_MOVE(QWindowsContext)
 public:
+    using HandleBaseWindowHash = QHash<HWND, QWindowsWindow *>;
 
     enum SystemInfoFlags
     {
@@ -246,6 +247,8 @@ public:
 
     bool useRTLExtensions() const;
     QList<int> possibleKeys(const QKeyEvent *e) const;
+
+    HandleBaseWindowHash &windows();
 
     static bool isSessionLocked();
 
